Fixed layout issues

--- a/src/assets/scss/layouts/_footer.scss
+++ b/src/assets/scss/layouts/_footer.scss
@@ -235,7 +235,7 @@
   }
 
   &__title {    
-    font-size: 18px;
+    font-size: 28px;
     font-weight: 600;
 
     margin-bottom: 30px;
@@ -258,7 +258,7 @@
       li {
         margin-bottom: 30px;
         a {
-          font-size: 15px;
+          font-size: 18px;
           line-height: 1.3;
 
           position: relative;
